cluster/apps/mealie/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/version: v3.0.2
  name: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
        app.kubernetes.io/version: v3.0.2
    spec:
      automountServiceAccountToken: false
      containers:
      - image: ghcr.io/mealie-recipes/mealie:v3.0.2
        name: mealie
        ports:
        - containerPort: 9000
          name: mealie
        volumeMounts:
        - mountPath: /app/data/
          name: mealie-pvc
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: mealie-pvc
        persistentVolumeClaim:
          claimName: mealie-pvc
