cluster/apps/mealie/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/version: v3.0.2
  name: mealie
spec:
  selector:
    app.kubernetes.io/name: mealie
  ports:
  - name: http-mealie
    port: 9000
    targetPort: 9000
